@@ -213,25 +213,20 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
   An object of class \code{netmeta} with corresponding \code{print},
   \code{summary}, \code{forest}, and \code{netrank} function. The
   object is a list containing the following components:
-  \item{TE, seTE, studlab, treat1, treat2, sm, level, level.comb}{As
-    defined above.}    
-  \item{comb.fixed, comb.random, prediction, level.predict}{As defined
-    above.}
-  \item{reference.group, baseline.reference, all.treatments}{As defined
-    above.}
-  \item{seq, tau.preset, tol.multiarm, details.chkmultiarm}{As defined
-    above.}
-  \item{reference.group, baseline.reference, all.treatments,
-    sep.trts}{As defined above.}
-  \item{backtransf, nchar.trts, title, warn}{As defined above.}
+  \item{studlab, treat1, treat2, TE, seTE}{As defined above.}
   \item{seTE.adj}{Standard error of treatment estimate, adjusted for
     multi-arm studies.}
-  \item{reference.group}{The name of the reference group, if
-    specified, otherwise \code{c("")}.}
-  \item{all.treatments}{A logical or value \code{"NULL"}. If
-        \code{TRUE}, matrices with all treatment effects, and
-        confidence limits will be printed.}
+  \item{n1, n2, event1, event2}{As defined above.}
+  \item{k}{Total number of studies.}
+  \item{m}{Total number of pairwise comparisons.}
+  \item{n}{Total number of treatments.}
+  \item{d}{Total number of designs.}
   \item{trts}{Treatments included in network meta-analysis.}
+  \item{k.trts}{Number of studies evaluating a treatment.}
+  \item{n.trts}{Number of observations receiving a treatment (if
+    arguments \code{n1} and \code{n2} are provided).}
+  \item{events.trts}{Number of events observed for a treatment (if
+    arguments \code{event1} and \code{event2} are provided).}
   \item{studies}{Study labels coerced into a factor with its levels
     sorted alphabetically.}
   \item{narms}{Number of arms for each study.}
@@ -254,6 +249,8 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
     information from the whole network.}
   \item{w.fixed, w.random}{A vector of length \emph{m} of weights of
     individual studies (fixed effect / random effects model).}
+  \item{Q.fixed}{A vector of length \emph{m} of contributions to total
+    heterogeneity / inconsistency statistic.}
   \item{TE.fixed, TE.random}{\emph{n}x\emph{n} matrix with estimated overall
     treatment effects (fixed effect / random effects model).}
   \item{seTE.fixed, seTE.random}{\emph{n}x\emph{n} matrix with standard errors
@@ -264,6 +261,13 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
   \item{zval.fixed, pval.fixed, zval.random, pval.random}{\emph{n}x\emph{n}
     matrices with z-value and p-value for test of overall treatment
     effect (fixed effect / random effects model).}
+  \item{seTE.predict}{\emph{n}x\emph{n} matrix with standard errors
+    for prediction intervals.}
+  \item{lower.predict, upper.predict}{\emph{n}x\emph{n} matrices with
+    lower and upper prediction interval limits.}
+  \item{prop.direct.fixed, prop.direct.random}{A named vector of the
+    direct evidence proportion of each network estimate. (fixed effect
+    / random effects model).}
   \item{TE.direct.fixed, TE.direct.random}{\emph{n}x\emph{n} matrix
     with estimated treatment effects from direct evidence (fixed
     effect / random effects model).}
@@ -292,15 +296,6 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
     pval.indirect.random}{\emph{n}x\emph{n} matrices with z-value and
     p-value for test of overall treatment effect from indirect evidence
     (fixed effect / random effects model).}
-  \item{prop.direct.fixed, prop.direct.random}{A named vector of the
-    direct evidence proportion of each network estimate. (fixed effect
-    / random effects model).}
-  \item{Q.fixed}{A vector of length \emph{m} of contributions to total
-    heterogeneity / inconsistency statistic.}
-  \item{k}{Total number of studies.}
-  \item{m}{Total number of pairwise comparisons.}
-  \item{n}{Total number of treatments.}
-  \item{d}{Total number of designs.}
   \item{Q}{Overall heterogeneity / inconsistency statistic.}
   \item{df.Q}{Degrees of freedom for test of heterogeneity / inconsistency.}
   \item{pval.Q}{P-value for test of heterogeneity / inconsistency.}
@@ -314,6 +309,9 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
   \item{df.Q.inconsistency}{Degrees of freedom for test of overall
     inconsistency.}
   \item{pval.Q.inconsistency}{P-value for test of overall inconsistency.}
+  \item{Q.decomp}{Data frame with columns 'treat1', 'treat2', 'Q',
+    'df' and 'pval.Q', providing heterogeneity statistics for each
+    pairwise meta-analysis of direct comparisons.}
   \item{A.matrix}{Adjacency matrix (\emph{n}x\emph{n}).}
   \item{B.matrix}{Edge-vertex incidence matrix (\emph{m}x\emph{n}).}
   \item{L.matrix}{Laplacian matrix (\emph{n}x\emph{n}).}
@@ -323,14 +321,27 @@ netmeta(TE, seTE, treat1, treat2, studlab, data=NULL, subset=NULL,
     meta-analyses, where direct comparisons exist (\emph{n}x\emph{n}).}
   \item{G.matrix}{Matrix with variances and covariances of comparisons
     (\emph{m}x\emph{m}). G is defined as \strong{BL+B^{t}}.}
-  \item{H.matrix}{Hat matrix (\emph{m}x\emph{m}), defined as \strong{H=GW=BL+B^{t}W}.}
-  \item{Cov.fixed}{Variance-covariance matrix (fixed effect model)}
-  \item{Cov.random}{Variance-covariance matrix (random effects model)}
-  \item{Q.decomp}{Data frame with columns 'treat1', 'treat2', 'Q',
-    'df' and 'pval.Q', providing heterogeneity statistics for each
-    pairwise meta-analysis of direct comparisons.}
+  \item{H.matrix}{Hat matrix (\emph{m}x\emph{m}), defined as
+    \strong{H=GW=BL+B^{t}W}.}
+  \item{n.matrix}{\emph{n}x\emph{n} matrix with number of observations
+    in direct comparisons (if arguments \code{n1} and \code{n2} are
+    provided).}
+  \item{events.matrix}{\emph{n}x\emph{n} matrix with number of events
+    in direct comparisons (if arguments \code{event1} and
+    \code{event2} are provided).}
   \item{P.fixed, P.random}{\emph{n}x\emph{n} matrix with direct
     evidence proportions (fixed effect / random effects model).}
+  \item{Cov.fixed}{Variance-covariance matrix (fixed effect model)}
+  \item{Cov.random}{Variance-covariance matrix (random effects model)}
+  \item{sm, level, level.comb}{As defined above.}
+  \item{comb.fixed, comb.random}{As defined above.}
+  \item{prediction, level.predict}{As defined above.}
+  \item{reference.group, baseline.reference, all.treatments}{As
+    defined above.}
+  \item{seq, tau.preset, tol.multiarm, details.chkmultiarm}{As defined
+    above.}
+  \item{sep.trts, nchar.trts}{As defined above.}
+  \item{backtransf, title, warn}{As defined above.}
   \item{call}{Function call.}
   \item{version}{Version of R package netmeta used to create object.}
 }
